--- a/homework3_sb.ipynb
+++ b/homework3_sb.ipynb
@@ -280,13 +280,17 @@
     "        yield env.process(bank.wait_for_banker(customer))\n",
     "        release_greeter_ts = env.now\n",
     "\n",
-    "    # Request banker to help customer\n",
+    "    # Request banker to help customer complete application\n",
+    "    with bank.application.request() as request:\n",
+    "        yield request\n",
+    "        got_application_ts = env.now\n",
+    "        yield env.process(bank.application(customer))\n",
+    "\n",
     "    with bank.banker.request() as request:\n",
     "        yield request\n",
-    "        got_vaccinator_ts = env.now\n",
-    "        # Update vac occupancy - increment by 1\n",
-    "        prev_occ = clinic.vac_occupancy_list[-1][1]\n",
-    "        new_occ = (env.now, prev_occ + 1)\n",
+    "        # Update banker occupancy - increment by 1\n",
+    "        prev_occ = bank.banker_occupancy_list[-1][1]\n",
+    "        cust_beinghelped = (env.now, prev_occ + 1)\n",
     "        clinic.vac_occupancy_list.append(new_occ)\n",
     "        yield env.process(clinic.vaccinate(patient))\n",
     "        release_vaccinator_ts = env.now\n",
